--- a/index.html
+++ b/index.html
@@ -734,10 +734,10 @@
 									
 									<div class="short_info_wrap">
 										<ul>
-											<li><p><label>Address:</label><span>Karachi, Pakistan</span></p></li>
+											<li><p><label>Address:</label><span>Bamberg, Germany</span></p></li>
 											<li><p><label>Email:</label><span><a href="mailto:taha.hassan110@gmail.com">taha.hassan110@gmail.com</a></span></p></li>
-											<li><p><label>Phone / WhatsApp:</label><span>+92-334-3109124</span></p></li>
-											<li><p><label>Facebook:</label><span> <a href="https://www.facebook.com/taha.hsn" target="_blank">taha.hsn</a></span></p></li>
+											<li><p><label>Phone / WhatsApp:</label><span>+49-176-46735728</span></p></li>
+											<!-- <li><p><label>Facebook:</label><span> <a href="https://www.facebook.com/taha.hsn" target="_blank">taha.hsn</a></span></p></li> -->
 										<!--	<li><p><label>LinkedIn:</label><a href="https://pk.linkedin.com/in/taha-rizvi" target="_blank"> taha-rizvi </a>  </p></li> -->
 											<li><p><label>Steam:</label><span><a href="https://steamcommunity.com/id/T-Riz/" target="_blank"> T-Riz</a> </span></p></li>
 										</ul>
