--- a/index.html
+++ b/index.html
@@ -510,7 +510,7 @@
 											<ul>
 												
 												<li>
-													<span><label>City:</label> Karachi, Pakistan</span>
+													<span><label>City:</label> Bamberg, Germany</span>
 												</li>
 												<li>
 													<span><label>Interests:</label> Gaming, Table tennis</span>
@@ -526,7 +526,7 @@
 													<span><label>Mail:</label> <a href="mailto:taha.hassan110@gmail.com">taha.hassan110&#64;gmail.com</a></span>
 												</li>
 												<li>
-													<span><label>Phone:</label> <a href="#">+92-334-3109124</a></span>
+													<span><label>Phone:</label> <a href="#">+49-176-46735728</a></span>
 												</li>
 												
 											</ul>
