pics update - samrio

--- a/project_sanrioblast.html
+++ b/project_sanrioblast.html
@@ -244,9 +244,11 @@
 						<div class="images_list">
 							<ul>
 								<li>
-									<img src="img/portfolio/shards_pic1.PNG" alt="" />
+									<img src="img/portfolio/sanrio_screen_1.jpg" alt="" />
 								</li>
-								
+								<li>
+									<img src="img/portfolio/sanrio_screen_2.jpg" alt="" />
+								</li>
 
 							</ul>
 						</div>
