--- a/index.html
+++ b/index.html
@@ -280,9 +280,9 @@
 										</div>
 									</li>
 
-									<li class="Mobile">
-										<div class="entry arlo_tm_portfolio_animation_wrap" data-title="Sanrio dream blast" data-category="Mobile">
-											<a href="project_sanrioblast.html">
+									<li class="Virtual_Reality PC Mobile">
+										<div class="entry arlo_tm_portfolio_animation_wrap" data-title="UI Work" data-category="PC">
+											<a href="project_ui.html">
 												<img src="img/portfolio/600x600.jpg" alt="" />
 												<div class="arlo_tm_portfolio_image_main" data-img-url="img/portfolio/sanrio_blast_icon.jpg"></div>
 											</a>
