added project to portfolio
added project to portfolio

--- a/index.html
+++ b/index.html
@@ -253,6 +253,15 @@
 								</ul>
 								<ul class="arlo_tm_portfolio_list gallery_zoom">
 									
+									<li class="PC Mobile">
+										<div class="entry arlo_tm_portfolio_animation_wrap" data-title="Virtual Football" data-category="PC">
+											<a href="project_SR_virtual_football.html">
+												<img src="img/portfolio/600x600.jpg" alt="" />
+												<div class="arlo_tm_portfolio_image_main" data-img-url="img/portfolio/virtual-football-icon.jpg"></div>
+											</a>
+										</div>
+									</li>
+
 									<li class="Virtual_Reality">
 										<div class="entry arlo_tm_portfolio_animation_wrap" data-title="RW1 IKA Project" data-category="Virtual_Reality">
 											<a href="project_rw1_ika.html">
@@ -759,7 +768,7 @@
 						</div>
 						<div class="arlo_tm_footer_wrap">
 							<div class="container">
-								<p>&copy; Copyright 2022. All Rights are Reserved.</p>
+								<p>&copy; Copyright 2024. All Rights are Reserved.</p>
 							</div>
 						</div>
 					</div>
